--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head lang="en">
 	<meta charset="UTF-8">
+	<title>MVP Wavemaker</title>
 	<link href="http://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/flatly/bootstrap.min.css" type="text/css" rel="stylesheet" />
 	<link href="assets/css/styles.css" type="text/css" rel="stylesheet" />
 </head>
